--- a/SlideshowApp2/Main.storyboard
+++ b/SlideshowApp2/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina5_9" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,51 +15,43 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SlideshowApp2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dgm-sJ-NPX">
-                                <rect key="frame" x="67" y="85" width="240" height="197"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dgm-sJ-NPX">
+                                <rect key="frame" x="74" y="67" width="265" height="218"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="OGh-Hg-x0Q"/>
-                                    <constraint firstAttribute="height" constant="197" id="cS6-JE-l7N"/>
-                                </constraints>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="1fo-hm-FAW" appends="YES" id="QEI-WM-T4Z"/>
                                 </connections>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NrX-TF-DVp">
-                                <rect key="frame" x="65" y="402" width="32" height="34"/>
+                                <rect key="frame" x="72" y="365" width="35" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <action selector="back:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f9m-1m-X9P"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PD1-Tb-A8S">
-                                <rect key="frame" x="274" y="402" width="33" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="進む"/>
-                                <connections>
-                                    <action selector="next:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zHg-4X-IY6"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aRs-mi-kFP">
-                                <rect key="frame" x="153" y="402" width="66" height="34"/>
+                                <rect key="frame" x="169" y="365" width="73" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="再生"/>
                                 <connections>
                                     <action selector="startstop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BAw-Ad-WPz"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PD1-Tb-A8S">
+                                <rect key="frame" x="309" y="365" width="37" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="進む"/>
+                                <connections>
+                                    <action selector="next:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zHg-4X-IY6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dgm-sJ-NPX" secondAttribute="trailing" constant="68" id="KiJ-6m-ngB"/>
-                            <constraint firstItem="dgm-sJ-NPX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="41" id="UJR-QG-gQx"/>
-                            <constraint firstItem="dgm-sJ-NPX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="fm8-9F-N45"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -85,14 +77,16 @@
             <objects>
                 <viewController id="pbv-ey-0XQ" customClass="ResultViewController" customModule="SlideshowApp2" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4AH-Oi-ILg">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="next" translatesAutoresizingMaskIntoConstraints="NO" id="ENY-9N-x2F">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="692"/>
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="next" translatesAutoresizingMaskIntoConstraints="NO" id="ENY-9N-x2F">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="589"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ne-H9-udV">
-                                <rect key="frame" x="172" y="728" width="31" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ne-H9-udV">
+                                <rect key="frame" x="190" y="639" width="34" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="戻る"/>
                                 <connections>
                                     <segue destination="8IA-Pj-ebi" kind="unwind" unwindAction="unwind:" id="RMh-23-prR"/>
@@ -100,16 +94,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="ISE-uu-16Z" firstAttribute="trailing" secondItem="5ne-H9-udV" secondAttribute="trailing" constant="172" id="4JC-YI-ELc"/>
-                            <constraint firstItem="ENY-9N-x2F" firstAttribute="top" secondItem="4AH-Oi-ILg" secondAttribute="top" id="99p-ta-eeu"/>
-                            <constraint firstItem="ISE-uu-16Z" firstAttribute="bottom" secondItem="5ne-H9-udV" secondAttribute="bottom" constant="20" id="PRD-aB-LNW"/>
-                            <constraint firstItem="5ne-H9-udV" firstAttribute="leading" secondItem="ISE-uu-16Z" secondAttribute="leading" constant="172" id="VzZ-iJ-yWR"/>
-                            <constraint firstItem="ENY-9N-x2F" firstAttribute="trailing" secondItem="ISE-uu-16Z" secondAttribute="trailing" id="ZXN-LZ-itA"/>
-                            <constraint firstItem="ENY-9N-x2F" firstAttribute="leading" secondItem="ISE-uu-16Z" secondAttribute="leading" id="hyq-xQ-fKf"/>
-                            <constraint firstItem="5ne-H9-udV" firstAttribute="top" secondItem="ENY-9N-x2F" secondAttribute="bottom" constant="36" id="rcF-li-fEB"/>
-                            <constraint firstItem="5ne-H9-udV" firstAttribute="top" secondItem="ENY-9N-x2F" secondAttribute="bottom" constant="36" id="uJv-pg-eIp"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ISE-uu-16Z"/>
                     </view>
                     <connections>
@@ -119,7 +103,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z3n-2K-Q36" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="8IA-Pj-ebi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1440.8" y="33.733133433283363"/>
+            <point key="canvasLocation" x="1440.8" y="32.833583208395808"/>
         </scene>
     </scenes>
 </document>
